k8s/app/postgres/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: devops-app

spec:
  podSelector:
    matchLabels:
      app: postgres

  policyTypes:
    - Ingress

  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: nodejs-app


      ports:
        - protocol: TCP
          port: 5432
